--- a/styles.css
+++ b/styles.css
@@ -29,4 +29,27 @@
 .cardBack {
   background-color: #aaa;
 }
+.cardFront {
+  display: none;
+  background-color: #333;
+  
+}
+
+.clicked .cardBack {
+  display: none;
+}
+
+.clicked .cardFront {
+  display: block;
+}
+.pic1 .cardFront {
+  background-image: url(images/one.png);
+  background-size: cover;
+}
+
+.pic2 .cardFront {
+  background-image: url(images/two.png);
+  background-size: cover;
+}
+}
 
